name: getting-started-with-netwire
description: Code to accompany my blog post "Getting Started with Netwire and SDL"
version: 0.0.1
cabal-version: >= 1.14
build-type: Simple
license: GPL
copyright: Oliver Charles
author: Oliver Charles

Executable Challenge1
  default-language: Haskell2010
  hs-source-dirs: .
  build-depends:
    base >= 4.5 && < 4.7,
    SDL,
    netwire
  main-is: Challenge1.hs

Executable Challenge2
  default-language: Haskell2010
  hs-source-dirs: .
  build-depends:
    base >= 4.5 && < 4.7,
    SDL,
    netwire,
    containers
  main-is: Challenge2.hs

Executable Challenge3
  default-language: Haskell2010
  hs-source-dirs: .
  build-depends:
    base >= 4.5 && < 4.7,
    SDL,
    netwire,
    containers
  main-is: Challenge3.hs
